Fix low contrast on settings text with transparent bg

--- a/packages/metastream-app/src/components/settings/options.css
+++ b/packages/metastream-app/src/components/settings/options.css
@@ -16,6 +16,10 @@
   margin-top: 1.5rem;
 }
 
+:global(.transparent) .option:not(:last-child)::after {
+  mix-blend-mode: normal;
+}
+
 .option:not(:only-child)::after {
   height: 1px;
 }
@@ -57,6 +61,10 @@
   background: white;
   mix-blend-mode: overlay;
   border: none;
+}
+
+:global(.transparent) .dropdown-primary {
+  mix-blend-mode: normal;
 }
 
 .dropdown-secondary {
